css/meals.css
.secMeals {
    display: flex;
    flex-direction: column;
    width: 100%;
}
.mealsUndBasket{
    width: calc(100% - 300px);
    
}
.mainImg {
    height: 234px;
    width: 100%;
    object-fit: cover;
    margin: 0;
}

#mainMeals {
    margin: 0;
    padding: 0 10px;
}

#Categories {
    display: flex;
    justify-content: space-evenly;
    padding: 16px 0;
}

.imgCategory {
    height: 80px;
    border-radius: 100%;
}

.Category {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.formDish {
    position: relative;
    display: flex;
    justify-content: space-between;
    margin: 12px 0;
    box-shadow: rgb(127, 255, 212, 0.712) 1.95px 1.95px 8.6px;
    border-radius: 25px;
    padding: 6px;
    margin-bottom: 26px;

}

.formDish:hover {
    background-color: rgba(127, 255, 212, 0.163);
}
.dataDish {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    margin-top: 11px;
    margin-bottom: 11px;
    padding-left: 11px;
}

.dataDish :last-child{
    font-weight: bold;
    color: gold;
}

.imgDish {
    height: 160px;
    border-radius: 25px;
    margin-right: 19px;
    margin-top: 19px;
    box-shadow: rgba(127, 255, 212, 0.877) 1.95px 1.95px 8.6px;

}

.btnAddMeale {
    position: absolute;
    top: 6px;
    right: 6px;
    font-size: 30px;
    font-weight: bold;
    height: 40px;
    width: 40px;
    border-radius: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    color: #FD5B4F;
    background-color: rgb(127, 255, 212);
    padding-top: 12px;
    padding-bottom: 19px;
}

@media (max-width: 840px){
    .imgCategory{
        height: 60px;
    }
    .imgDish {
        height: 130px;
    }
}
@media (max-width: 680px){

}

